--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Millisecond Studios</title>
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <h1>Testing!</h1>
+        <div class="nav">
+            <a href="teams.html">Team</a>
+            <a href="projects.html">Projects</a>
+            <a href="index.html">Home</a>
+        </div>
+
+        <h2>Millisecond Studios</h2>
+
+        <div class="aboutushome">
+            <h1>About Us</h1>
+            <p>We at Millisecond Studios are a passionate team, intersting in making the worlds best games!</p>
+        </div>
 </body>
 </html>
