--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
             <a href="index.html">Home</a>
         </div>
 
+        <div class="maintitle">
         <h2>Millisecond Studios</h2>
+        </div>
 
         <div class="aboutushome">
             <h1>About Us</h1>
-            <p>We at Millisecond Studios are a passionate team, intersting in making the worlds best games!</p>
+            <p>We at Millisecond Studios are a passionate team, intersted in making the worlds best games!</p>
+        </div>
+
+        <div class="logoinmiddle">
+            <a href="https://ibb.co/cLMp5Hv"><img src="https://i.ibb.co/ws3bHXL/Millisecond-Studios-Logo.png" alt="Millisecond-Studios-Logo"/></a>
         </div>
 </body>
 </html>
